# interplex-rs

./: .gitignore  Cargo.toml  README.md
crates/interplex/: Cargo.toml
crates/interplex-common/: Cargo.toml
crates/interplex-common/src/: error.rs  identification.rs
crates/interplex-common/src/rendezvous/: client.rs  message.rs  mod.rs  registrations.rs  server.rs
crates/interplex/src/: error.rs  ipc.rs  lib.rs  network.rs  netwrapper.rs  node.rs
crates/interplex_common/: Cargo.toml
crates/interplex_common/src/: error.rs  lib.rs
crates/interplex_common/src/rendezvous/: client.rs  message.rs  mod.rs  registrations.rs
interplex/: Cargo.toml
