[package]
name = "interplex"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
derive_builder = "0.20.2"
libp2p = { version = "0.55.0", features = ["noise", "tcp", "yamux", "identify", "dns", "autonat", "relay", "ping", "upnp", "ed25519", "serde", "tokio", "floodsub"] }
libp2p-stream = "0.3.0-alpha"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "serde", "fast-rng"] }
interplex_common = {path = "../interplex_common"}
thiserror = "2.0.12"
serde_cbor = "0.11.2"
